readjusting color contrast and fixing wirefram

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -174,6 +174,26 @@ footer p {
     padding-top: 15px;
 }
 
+.wireframe {
+    grid-column: 3 / 1;
+    color: #ffffff; /* White color */
+    background-color: #a24936; /* Background color */
+    padding: 10px 2px; /* Padding around the link */
+    border-radius: 5px; /* Rounded corners */
+    text-decoration: none; /* Remove underline */
+    text-align: center;
+    font-style: italic;
+    font-size: larger;
+}
+
+.wireframe:hover {
+    background-color: #83281d; /* Darker background color on hover */
+}
+
+.footer-link:hover {
+    background-color: #83281d; /* Darker background color on hover */
+}
+
 .sociallinks {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
@@ -187,7 +207,7 @@ footer p {
     padding-top: 80px;
     margin-top: 150px;
     height: 150px;
-    background-color: #a0aca8;
+    background-color: #8ACDEA;
     font-size: 2.6rem;
 }
 
@@ -216,6 +236,11 @@ footer p {
     align-items: center;
     flex-direction: column;
     padding: 42px;
+    background-color: aliceblue;
+}
+
+.employee h2 {
+    color: black
 }
 
 
@@ -245,7 +270,7 @@ footer p {
     align-items: center;
     flex-direction: column;
     padding: 57px;
-    background-color: #83BCA9;
+    background-color: #FFFD98;
 }
 
 .iframe {
@@ -255,7 +280,7 @@ footer p {
 
 form {
     text-align: center;
-    background-color: #a0aca8;
+    background-color: #8ACDEA;
 }
 
 form > fieldset > h2 {
@@ -324,3 +349,8 @@ textarea {
 button:hover {
     background-color: rgb(0, 7, 100);
 }
+
+
+
+
+
